--- a/package.json
+++ b/package.json
@@ -5,22 +5,22 @@
   "author": "aksae244@gmail.com",
   "description": "A simple helpful robot for your Company",
   "dependencies": {
-    "request": "*",
-    "cheerio": "0.18.0",
-    "hubot-maps": "0.0.1",
-    "hubot-shipit": "^0.1.2",
-    "hubot-rules": "^0.1.0",
+    "cheerio": "^0.18.0",
+    "hubot": "^2.11.4",
     "hubot-diagnostics": "0.0.1",
-    "hubot-youtube": "^0.1.2",
-    "hubot-help": "^0.1.1",
     "hubot-google-images": "^0.1.4",
     "hubot-google-translate": "^0.1.0",
+    "hubot-help": "^0.1.1",
     "hubot-heroku-keepalive": "0.0.4",
+    "hubot-maps": "0.0.1",
     "hubot-pugme": "^0.1.0",
     "hubot-redis-brain": "0.0.2",
+    "hubot-rules": "^0.1.0",
     "hubot-scripts": "^2.5.16",
-    "hubot": "^2.11.4",
-    "hubot-slack": "^3.3.0"
+    "hubot-shipit": "^0.1.2",
+    "hubot-slack": "^3.3.0",
+    "hubot-youtube": "^0.1.2",
+    "request": "^2.53.0"
   },
   "engines": {
     "node": "0.10.x"
